<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@color/black"
    tools:ignore="Overdraw"
    >

  <android.support.design.widget.AppBarLayout
      android:id="@+id/app_bar_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fitsSystemWindows="true"
      android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      >

    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/collapsing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:contentScrim="?attr/colorPrimary"
        app:expandedTitleGravity="left"
        app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"

        >

      <android.support.constraint.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >

        <ImageView
            android:id="@+id/imageViewBackDrop"
            android:layout_width="@dimen/constraint_match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_backdrop_description"
            android:scaleType="centerCrop"
            android:src="@drawable/dummy_backdrop"
            android:tint="@color/blueGrey800Trans95"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            />

        <ImageView
            android:id="@+id/imageViewPoster"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_poster_description"
            android:src="@drawable/dummy_poster"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewBackDrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            />

        <View
            android:id="@+id/viewTop"
            android:layout_width="@dimen/constraint_match_parent"
            android:layout_height="@dimen/line_height_thin"
            android:background="@drawable/custom_shape_horizontal_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewBackDrop"
            />

        <TextView
            android:id="@+id/textMovieTitle"
            android:layout_width="@dimen/constraint_match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/dummy_movie_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_movie_title"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/ratingBar"
            app:layout_constraintEnd_toStartOf="@+id/imageViewPoster"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintStart_toStartOf="@+id/imageViewBackDrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="5"
            android:stepSize="0.1"
            app:layout_constraintBottom_toTopOf="@+id/viewTop"
            app:layout_constraintEnd_toStartOf="@+id/imageViewPoster"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageViewBackDrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            style="?android:attr/ratingBarStyleSmall"
            />

      </android.support.constraint.ConstraintLayout>

      <android.support.v7.widget.Toolbar
          android:id="@+id/toolbar"
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          app:contentInsetLeft="@dimen/margin_empty"
          app:contentInsetStart="@dimen/margin_empty"
          app:contentInsetStartWithNavigation="@dimen/margin_empty"
          app:layout_collapseMode="pin"
          app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
          />

    </android.support.design.widget.CollapsingToolbarLayout>

  </android.support.design.widget.AppBarLayout>

  <android.support.v4.widget.NestedScrollView
      android:id="@+id/scroll"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:clipToPadding="false"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      >


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


      <TextView
          android:id="@+id/textRatingCaption"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/margin_small"
          android:layout_marginStart="@dimen/margin_small"
          android:layout_marginTop="@dimen/margin_medium"
          android:text="@string/dummy_movie_rating"
          android:textColor="@color/whiteee"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="parent"
          />
      <TextView
          android:id="@+id/textDateRelease"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/margin_small"
          android:layout_marginStart="@dimen/margin_small"
          android:layout_marginTop="@dimen/margin_medium"
          android:textColor="@color/whiteee"
          app:layout_constraintStart_toEndOf="@+id/textRatingCaption"
          app:layout_constraintTop_toBottomOf="parent"
          />

      <View
          android:id="@+id/view"
          android:layout_width="@dimen/constraint_match_parent"
          android:layout_height="@dimen/line_height_thin"
          android:layout_marginBottom="@dimen/margin_medium"
          android:layout_marginEnd="@dimen/margin_extra_large"
          android:layout_marginRight="@dimen/margin_extra_large"
          android:layout_marginTop="@dimen/margin_medium"
          android:background="@drawable/custom_shape_horizontal_line"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textRatingCaption"
          />

      <TextView
          android:id="@+id/textSynopsisCaption"
          android:layout_width="@dimen/constraint_match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/margin_small"
          android:layout_marginRight="@dimen/margin_small"
          android:layout_marginTop="@dimen/margin_medium"
          android:text="@string/synopsis_caption"
          android:textColor="@android:color/white"
          android:textSize="@dimen/text_size_caption_synopsis"
          android:textStyle="bold"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/view"
          />

      <TextView
          android:id="@+id/textSynopsisContent"
          android:layout_width="@dimen/constraint_match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/margin_small"
          android:layout_marginRight="@dimen/margin_small"
          android:layout_marginTop="@dimen/margin_medium"
          android:paddingBottom="@dimen/padding_footer"
          android:text="@string/dummy_movie_synopsis"
          android:textColor="@color/whiteee"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textSynopsisCaption"
          />

    </android.support.constraint.ConstraintLayout>
  </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>